replaced carousel(buggy) with horizontal scroll for homepage user photos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,11 +162,18 @@ button {
     border-right: 1px solid rgb(206, 206, 206);
 }
 
-.carouselContainer {
-    overflow-x: scroll;
-    overflow-y: hidden;
+/* .carouselContainer {
+    overflow:scroll;
+} */
+
+.scrolling-wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+  }
+
+  .image {
     
-}
+    min-width: 33%;
 
-
-
+  }
